Fix overflow issue on selector

--- a/css/selector.css
+++ b/css/selector.css
@@ -51,6 +51,7 @@ div.serverselect div.selector button.option span.material-icons-round {
 div.serverselect div.selector div.options {
   min-height: calc(100% - 70px);
   max-height: calc(100% - 70px);
+  overflow-x: hidden;
   overflow-y: auto;
   padding: 20px;
 }
